<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="full_name">Full name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_the_terms_and_conditions">I AGREE THE TERMS AND CONDITIONS</string>
</resources>