<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.example.login.presentation.RegistrationViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".presentation.RegisterFragment">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="12sp"
            android:textSize="24sp"/>
        <EditText
            android:id="@+id/full_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/full_name"
            app:layout_constraintTop_toBottomOf="@id/text"
            android:layout_margin="12sp"
            android:text="@={viewModel.fullName}"/>
        <EditText
            android:id="@+id/mobile_no_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/mobile_number"
            app:layout_constraintTop_toBottomOf="@id/full_name_text"
            android:layout_margin="12sp"
            android:text="@={viewModel.mobile_no}"/>
        <EditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/email_address"
            app:layout_constraintTop_toBottomOf="@id/mobile_no_text"
            android:layout_margin="12sp"
            android:text="@={viewModel.email}"/>
        <Spinner
            android:id="@+id/state_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="Select State"
            app:layout_constraintTop_toBottomOf="@id/email_text"
            android:layout_margin="12sp"/>
        <Spinner
            android:id="@+id/city_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="Select City"
            app:layout_constraintTop_toBottomOf="@id/state_spinner"
            android:layout_margin="12sp"/>
        <EditText
            android:id="@+id/gst_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="GST(If applicable)"
            app:layout_constraintTop_toBottomOf="@id/city_spinner"
            android:layout_margin="12sp"
            android:text="@={viewModel.gst}"/>
        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@id/gst_text"
            android:layout_margin="12sp"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"/>
        <EditText
            android:id="@+id/confirm_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/confirm_password"
            app:layout_constraintTop_toBottomOf="@id/password_text"
            android:layout_margin="12sp"
            android:inputType="textPassword"
            android:text="@={viewModel.confirmPassword}"/>
        <CheckBox
            android:id="@+id/tc_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_text"
            app:layout_constraintStart_toStartOf="@id/password_text"
            android:checked="@={viewModel.tc_accept}"/>
        <TextView
            android:id="@+id/tc_text"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tc_checkbox"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tc_checkbox"
            android:text="@string/i_agree_the_terms_and_conditions"
            android:layout_margin="12sp"/>
        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tc_checkbox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/register"
            android:layout_margin="12sp"/>
        <Button
            android:id="@+id/goto_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/register_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/login"
            android:layout_margin="12sp"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>